<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gris">


        <TextView
            android:id="@+id/tvTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/poppins_extrabold"
            android:text="00:00:11"
            android:textAlignment="textStart"
            android:textColor="@color/azul_claro_gradient"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvtextoTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-18dp"
            android:fontFamily="@font/poppins_regular"
            android:text="Duración"
            android:textColor="@color/navy"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

        <TextView
            android:id="@+id/tvDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="10,00"
            android:textAlignment="center"
            android:textColor="@color/azul_claro_gradient"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tvDistanciaTexto"
            app:layout_constraintStart_toStartOf="@+id/tvDistanciaTexto"
            app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

        <TextView
            android:id="@+id/tvDistanciaTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Distancia (Km)"
            android:textColor="@color/navy"
            android:textSize="11sp"
            app:layout_constraintEnd_toStartOf="@+id/tvVelocidadTexto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDistancia" />

        <TextView
            android:id="@+id/tvVelocidad"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="4,12"
            android:textAlignment="center"
            android:textColor="@color/azul_claro_gradient"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tvVelocidadTexto"
            app:layout_constraintStart_toStartOf="@+id/tvVelocidadTexto"
            app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

        <TextView
            android:id="@+id/tvVelocidadTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Velocidad (Km/h)"
            android:textColor="@color/navy"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDistancia" />

        <TextView
            android:id="@+id/tvRitmo"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="5,55"
            android:textAlignment="center"
            android:textColor="@color/azul_claro_gradient"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tvRitmoTexto"
            app:layout_constraintStart_toStartOf="@+id/tvRitmoTexto"
            app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

        <TextView
            android:id="@+id/tvRitmoTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Ritmo (min/Km)"
            android:textColor="@color/navy"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvVelocidadTexto"
            app:layout_constraintTop_toBottomOf="@+id/tvDistancia" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvVelocidadTexto">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".MapsActivity" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_play"
            android:tint="@color/white"
            android:backgroundTint="@color/azul_claro_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCandadoabierto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_candado_abierto"
            android:backgroundTint="@color/naranja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCandadocerrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_candado_cerrado"
            android:backgroundTint="@color/naranja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="125dp"
            android:backgroundTint="@color/amarillo"
            android:src="@drawable/ic_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/google"
            android:src="@drawable/ic_stop"
            app:backgroundTint="@color/azul_cielo"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="#F60000"
            android:visibility="invisible"/>



        </androidx.constraintlayout.widget.ConstraintLayout>




    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Theme.Runnica"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/activity_main_drawer"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gris_transparente">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="75dp"
            android:layout_marginHorizontal="15dp"
            android:padding="10dp"
            android:background="@color/gris"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lySeleccionCorrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSeleccionCorrer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/Correr"
                    android:textSize="15sp"
                    android:textColor="@color/navy"/>

                <ImageView
                    android:id="@+id/iviconoCorrer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_run_small"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lySeleccionAndar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lySeleccionCorrer"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/tvSeleccionAndar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Andar"
                    android:textSize="15sp"
                    android:textColor="@color/navy"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:id="@+id/iviconoAndar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="right"
                    android:src="@drawable/ic_run_small"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/lySeleccionBicicleta"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toBottomOf="@+id/lySeleccionAndar"
               app:layout_constraintStart_toStartOf="parent">



               <TextView
                   android:id="@+id/tvSeleccionBicicleta"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/Bicicleta"
                   android:textSize="15sp"
                   android:textColor="@color/navy"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   />

               <ImageView
                   android:id="@+id/iviconoBicicleta"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_run_small"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"/>


           </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.drawerlayout.widget.DrawerLayout>

